Cria documentação dos métodos de autenticação
